worked out issue with text-area placeholder text not showing. contact form complete for now as a draft

--- a/Styling/modules/form.scss
+++ b/Styling/modules/form.scss
@@ -18,7 +18,8 @@
   }
 
   &__text-area {
-    width: 250px;
+    width: 360px;
+    height: 300px;
     border-radius: 7px;
   }
 }
