--- a/Styling/modules/mixins.scss
+++ b/Styling/modules/mixins.scss
@@ -6,6 +6,7 @@
 
 @mixin header {
   @include center;
+  font-family: Arial, Helvetica, sans-serif;
   font-weight: bold;
   margin-top: 15rem;
 
