--- a/Styling/output.css
+++ b/Styling/output.css
@@ -47,7 +47,8 @@ body {
   margin: 15px;
 }
 .form__text-area {
-  width: 250px;
+  width: 360px;
+  height: 300px;
   border-radius: 7px;
 }
 
@@ -55,6 +56,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  font-family: Arial, Helvetica, sans-serif;
   font-weight: bold;
   margin-top: 15rem;
 }
